# land_intelligence_core

./: AGENTS.md  conftest.py
bedrock/: README.md  pyproject.toml
bedrock/api/: __init__.py  decision_api.py  evaluation_api.py  experiments_api.py  feasibility_api.py  layout_api.py  optimization_api.py  parcel_api.py  pipeline_api.py  runs_api.py  shortlist_api.py  zoning_api.py
bedrock/benchmarks/: constraint_enrichment_experiment.json  evaluation_agent_report.json  http_validation_config.json  layout_benchmark_results.json  layout_evaluation_results.json  layout_realism_gap_analysis.json  layout_regression_baseline_spec_v2.json  layout_regression_recenter_report.json  layout_results.json  phase1_parcel_zoning_results.json  pipeline_ui_readiness_evaluation.json  po2_recalibrated_report.json  po2_stabilization_baseline.json  po2_stabilization_latest.json  ui_real_parcel_validation_report.json  zoning_coverage_validation_report.json
bedrock/configs/: system_config.yaml
bedrock/contracts/: __init__.py  base.py  decision.py  evidence.py  experiment_run.py  feasibility.py  feasibility_result.py  feasibility_validation.py  layout.py  layout_candidate_batch.py  layout_result.py  market_data.py  near_feasible_result.py  optimization_run.py  parcel.py  pipeline_execution_result.py  pipeline_run.py  scenario_evaluation.py  schema_registry.py  validators.py  zoning.py  zoning_rules.py
bedrock/data/: absorption_rates.json  impact_fees.json  parcels.db  pipeline_runs.jsonl  shortlist.json  test_parcels.geojson  zoning_rules.json  zoning_stub_districts.json
docs/: README.md  (+4 more)
(+1781 files in other folders)
